--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body data-spy="scroll" data-target="#toc">
     <div class="github-fork-ribbon-wrapper right">
       <div class="github-fork-ribbon">
-        <a href="https://github.com/struktur-data/syllabus">Fork me on GitHub</a>
+        <a href="https://github.com/muliasulistiyono/RPL.github.io">Fork me on GitHub</a>
       </div>
     </div>
     <div class="container">
